# video-derivative-rs

./: .gitignore  Cargo.toml  video-to-test.MOV
src/: lib.rs  main.rs
src/processors/: mod.rs  video_derivative.rs
src/types/: frame.rs  mod.rs
src/utils/: frame_generator.rs  mod.rs
src/video/: ffmpeg_wrapper.rs  mod.rs
